# clone_codding_task

./: .gitignore  Dockerfile  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/src/: device_if.hpp
src/common/: CMakeLists.txt
src/common/include/: configuration.hpp  measurement.hpp  message_id.hpp
src/database/: CMakeLists.txt
src/database/include/: database.cpp  database.hpp
src/device-controller/: CMakeLists.txt
src/device-controller/include/: device_controller.cpp  device_controller.hpp
src/gui/: CMakeLists.txt  Main.qml  main.cpp
src/gui/src/: device_if.cpp  device_if.hpp
src/half-2.2.0/: CMakeLists.txt
src/http-server/: CMakeLists.txt
src/http-server/include/: server.cpp  server.hpp
src/loguru/: CMakeLists.txt
src/loguru/include/: loguru.cpp
src/parser/: CMakeLists.txt
src/parser/include/: parser.cpp  parser.hpp
src/serial-talker/: CMakeLists.txt
src/serial-talker/include/: serial_talker.cpp  serial_talker.hpp
src/sim/: CMakeLists.txt
src/sim/include/: simulator.cpp  simulator.hpp
src/sim/src/: device.cpp  device.h  device_configuration.h  message_id.h  message_processor.cpp  message_processor.h  state.h
